Changes made between Gamera File Releases
=========================================

 - C++ graph API also usable from toolkits

 - fixed a type mismatch in graph API on 64bit bigendian architectures

 - changing feature set in Biollante now works

 - changes in rank() and mean():
    o significantly faster
    o default border_treatment changed to 'reflect',
      because that leads to more expected results than 'padwhite'
    o extended to grey16 images

 - min_max_filter for computing minimum and maximum filter in
   a runtime that is independent from the window size (thanks to
   David Kolanus). This method is now used by shading_subtraction
   to speed up the binarization considerably.


Version 3.3.2, Sep 19, 2011
----------------------------

 - FSF address in all files corrected

 - sub_cc_analysis did not work on images with offset

 - fixed memory leaks in segmentation_error


Version 3.3.1, Aug 25, 2011
----------------------------

 - plugins for convex hull computation added in category Geometry

 - Int args can now have default NoneDefault;
   required use of TextControl instead of SpinControl for Int in GUI

 - new binarization plugin shading_subtraction for images
   with shaded backgrounds

 - conversion from FLOAT to GREYSCALE/GREY16/RGB now works when
   FLOAT image contains negative values. The range [min,max] is
   now linearly scaled to grey range.

 - runlength_smearing no longer returns empty segments

 - RGBPixel.value now returns V in [0.0,1.0] as documented, not in [0,255]


Version 3.3.0, Mai 02, 2011
----------------------------

 - graph API completely rewritten from scratch (thanks to Christian Brandt)
   Changes from a user's perspective:
    o colorize() for coloring a (planar) graph in linear time
    o new flag CHECK_ON_INSERT
    o is_*_connected now actually tests connectedness
    o is_cyclic now actually tests for cycles
    o has_path() for path existence check between nodes